3 common javascript primitive data type practice

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 
     <!-- js external file   -->
     <script src="./script.js"></script>
+    <script src="./valuetype.js"></script>
   </body>
 </html>
