javascript variable nameing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <p>Hi, There i am learning Javascript Basic to Advanced</p>
 
     <!-- js external file   -->
-    <script src="./script.js"></script>
-    <script src="./valuetype.js"></script>
+    <!-- <script src="./script.js"></script>
+    <script src="./valuetype.js"></script> -->
+    <script src="./js-naming.js"></script>
   </body>
 </html>
