number data type  conversion

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- js external file   -->
     <!-- <script src="./script.js"></script>
     <script src="./valuetype.js"></script> -->
-    <script src="./js-naming.js"></script>
+    <!-- <script src="./js-naming.js"></script> -->
+    <script src="./number.js"></script>
   </body>
 </html>
