javascript some shorthand practice

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- <script src="./script.js"></script>
     <script src="./valuetype.js"></script> -->
     <!-- <script src="./js-naming.js"></script> -->
-    <script src="./number.js"></script>
+    <!-- <script src="./number.js"></script> -->
+    <script src="./js-shortend.js"></script>
   </body>
 </html>
